<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HeartAlert</string>
    <string name="selectDevice">Select BLE Device (Polar H7 or NRF52 Kit)</string>
    <string name="action_settings">Disconnect BLE Device</string>
    <string name="couldnotconnect">Sorry, an error occurred while connecting to the device</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="bluetoothOff">BluetoothAdapter is off, would you like to turn it on?</string>
    <string name="rpm">RRI</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="avg">Avg</string>
    <string name="about">About</string>
    <string name="title_activity_about">About</string>
    <string name="banner_ad_unit_id">ca-app-pub-7344227317954564/2556270733</string>
    <string name="aboutText">
        This app is made for Project 97 of the 2018 Electrical and Computer Engineering Part IV Projects
        at the University of Auckland. The app\'s focus is to provide automated emergency callouts when
        anomalies in heart rate patterns are detected.
        \n\n
        Heart rate anomaly detection is conducted via a trained back-propagation neural network. Data
        is gathered from Physionet, with samples containing the 1024 RR Intervals before the onset of ventricular
        tachycardia. From research, this allows a 10 second buffer time between the prediction of onset
        and actual condition, which should give time to call emergency services.
        \n\n
        Ventricular tachycardia is an important condition to detect because it naturally leads to
        life-threatening conditions such as ventricular fibrillation, in which late detection poses
        an extremely high risk of death.
        \n\n
        The neural network architecture and weights are trained via Python (via Keras - a wrapper
        of the TensorFlow API) with 95% accuracy. They are imported into this app for decision making
        based off heart rate readings from a Polar H7 heart rate monitor. From research, this monitor
        is highly accurate relative to standard ECG monitors in getting accurate R-R intervals (r = 0.996).
        \n\n
        You can also connect a programmed NRF52 device which can cycle through different heart rate
        patterns akin to different diseases, to observe the neural network's real-time accuracy.
        \n\n
        \n\n\n****Any BLE device connected on app needs to be paired prior. Bluetooth 4.0 is required
        for BLE.
    </string>

</resources>