<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:ignore="MergeRootFrame">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selectDevice" />

    <Spinner
        android:id="@+id/deviceDropdown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/rpm"
        android:layout_width="139dp"
        android:layout_height="44dp"
        android:layout_gravity="center_horizontal"
        android:fontFamily="sans-serif"
        android:paddingTop="5dp"
        android:text="@string/rpm"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_light"
        android:textSize="36sp"
        android:textStyle="bold"
        android:typeface="sans" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/min"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/min" />

        <TextView
            android:id="@+id/avg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/avg" />

        <TextView
            android:id="@+id/max"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/max" />
    </LinearLayout>
    <com.androidplot.xy.XYPlot
        android:id="@+id/dynamicPlot"
        title="Heart Rate"
        android:layout_width="wrap_content"
        android:layout_height="285dp"
        android:layout_marginTop="10dp">
    </com.androidplot.xy.XYPlot>

    <ScrollView
        android:id="@+id/rriScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textViewRRI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Historical RRI Values..." />
        </LinearLayout>
    </ScrollView>


</LinearLayout>